[package]
name = "gossamer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
askama = "0.12.0"
dotenv = "0.15.0"
harsh = "0.2.2"
once_cell = "1.18.0"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.174", features = ["derive"] }
thiserror = "1.0.44"
url = "2.4.0"

[lib]
name = "gossamer"
path = "src/lib.rs"

[[bin]]
name = "gossamer"
path = "src/main.rs"

[profile.release]
lto = "thin"
