[package]
name = "gossamer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.1"
askama = "0.12.1"
dotenv = "0.15.0"
harsh = "0.2.2"
once_cell = "1.19.0"
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
url = "2.5.0"

[lib]
name = "gossamer"
path = "src/lib.rs"

[[bin]]
name = "gossamer"
path = "src/main.rs"

[profile.release]
lto = "thin"
